# company-code

connecthub-mobile/: README.md  package.json
connecthub-mobile/src/config/: constants.js
connecthub-mobile/src/services/: AuthService.js  SocialService.js
cryptoguard/: Cargo.toml  README.md
cryptoguard/src/: config.rs  crypto.rs  file_manager.rs  integrity.rs  key_management.rs  main.rs  network.rs  utils.rs
enterprise-api-gateway/: README.md  package.json  server.js
iot-device-manager/: README.md  requirements.txt
iot-device-manager/iot_platform/utils/: device_comm.py  security.py
iot-device-manager/iot_platform/views/: device_management.py
iot-device-manager/src/: main.py
securelogd/: Makefile  README.md
securelogd/src/: main.c
shopify-clone/: README.md  app.py  requirements.txt
