[package]
name = "cryptoguard"
version = "1.2.3"
authors = ["CryptoGuard Development Team <dev@cryptoguard.io>"]
edition = "2021"
description = "Enterprise cryptographic file processor and integrity manager"
readme = "README.md"
homepage = "https://cryptoguard.io"
repository = "https://github.com/cryptoguard/cryptoguard"
license = "MIT"
keywords = ["cryptography", "encryption", "security", "file-processing"]
categories = ["cryptography", "command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
scrypt = "0.11"
pbkdf2 = "0.12"
ring = "0.17"
rsa = { version = "0.9", features = ["sha2"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = "2.0"
base64 = "0.22"
hex = "0.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
config = "0.14"
dirs = "5.0"
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.4"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"

[[bin]]
name = "cryptoguard"
path = "src/main.rs"

[[bin]]
name = "cg-daemon"
path = "src/daemon.rs"

[[bin]]
name = "cg-verify"
path = "src/verify.rs"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0

[features]
default = ["aes", "chacha20", "rsa", "ed25519"]
aes = []
chacha20 = []
rsa = []
ed25519 = []
experimental = []
hardware-acceleration = [] 